--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,17 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+h1,
+h2,
+h3,
+h4,
+ul,
+p {
+    margin: 0 0 10px 0;
+    padding: 0;
+}
+
+ul {
+    list-style: none;
+}
